--- a/HRPlus-Backend/src/main/resources/application.properties
+++ b/HRPlus-Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/store
 spring.datasource.username= postgres
-spring.datasource.password=ranimranim123
+spring.datasource.password=postgres
 
 
 spring.datasource.driver-class-name=org.postgresql.Driver
